zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__deb__deb_0.snap
---
source: zoc/src/syntax_tree/parser/tests/deb.rs
expression: "&cst"
---
Deb(
    NumberLiteral {
        value: 0,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                1,
            ),
        ),
    },
)
