zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__deb__deb_1.snap
---
source: zoc/src/syntax_tree/parser/tests/deb.rs
expression: "&cst"
---
Deb(
    NumberLiteral {
        value: 1,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                1,
            ),
        ),
    },
)
